# libnmo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md
docs/: VIRTOOLS_FILE_FORMAT_SPEC.md  VIRTOOLS_IMPLEMENTATION_GUIDE.md  chunk_implementation.md  libnmo.md  nmo_array_examples.md  nmo_buffer_examples.md
examples/: CMakeLists.txt  custom_manager.c  file_converter.c  object_inspector.c  simple_load.c  simple_save.c
include/: nmo.h  nmo_builtin_schemas.h  nmo_types.h
include/app/: nmo_context.h  nmo_finish_loading.h  nmo_inspector.h  nmo_parser.h  nmo_plugin.h  nmo_session.h  nmo_stats.h
include/core/: nmo_allocator.h  nmo_arena.h  nmo_arena_array.h  nmo_array.h  nmo_bit_array.h  nmo_buffer.h  nmo_container_lifecycle.h  nmo_error.h  nmo_guid.h  nmo_hash.h  nmo_hash_common.h  nmo_hash_set.h  nmo_hash_table.h  nmo_indexed_map.h  nmo_list.h  nmo_logger.h  nmo_math.h  nmo_shared_library.h  nmo_string.h  nmo_utils.h
include/format/: nmo_chunk.h  nmo_chunk_api.h  nmo_chunk_context.h  nmo_chunk_helpers.h  nmo_chunk_parser.h  nmo_chunk_pool.h  nmo_chunk_writer.h  nmo_data.h  nmo_header.h  nmo_header1.h  nmo_id_remap.h  nmo_image.h  nmo_image_codec.h  nmo_manager.h  nmo_manager_registry.h  nmo_object.h  nmo_stb_adapter.h
include/io/: nmo_io.h  nmo_io_checksum.h  nmo_io_compressed.h  nmo_io_file.h  nmo_io_memory.h  nmo_io_stream.h  nmo_txn.h
include/prototype/: type_system_v2.h
include/schema/: nmo_builtin_types.h  nmo_ck2dentity_schemas.h  nmo_ck3dentity_schemas.h  nmo_ck3dobject_schemas.h  nmo_ckattributemanager_schemas.h  nmo_ckbehavior_schemas.h  nmo_ckbehaviorio_schemas.h  nmo_ckbehaviorlink_schemas.h  nmo_ckbeobject_schemas.h  nmo_ckcamera_schemas.h  nmo_ckdataarray_schemas.h  nmo_ckgroup_schemas.h  nmo_cklevel_schemas.h  nmo_cklight_schemas.h  nmo_ckmaterial_schemas.h  nmo_ckmesh_schemas.h  nmo_ckmessagemanager_schemas.h  nmo_ckobject_hierarchy.h  nmo_ckobject_schemas.h  nmo_ckparameter_schemas.h  nmo_ckrenderobject_schemas.h  nmo_ckscene_schemas.h  nmo_cksceneobject_schemas.h  nmo_cksprite_schemas.h  nmo_ckspritetext_schemas.h  nmo_cktexture_schemas.h  nmo_class_hierarchy.h  nmo_class_ids.h  nmo_migrator.h  nmo_param_meta.h  nmo_param_type_table.h  nmo_schema.h  nmo_schema_builder.h  nmo_schema_macros.h  nmo_schema_registry.h  nmo_validator.h  param_type_table.h
include/session/: nmo_builder.h  nmo_id_remap.h  nmo_load_session.h  nmo_object_index.h  nmo_object_repository.h  nmo_parser.h  nmo_reference_resolver.h
src/app/: context.c  finish_loading.c  inspector.c  nmo_plugin_manager.c  parser.c  session.c  stats.c
src/builtin_schemas/: ckbeobject.c  nmo_builtin_schemas.c
src/core/: allocator.c  arena.c  arena_array.c  array.c  bit_array.c  buffer.c  error.c  guid.c  hash.c  hash_set.c  hash_table.c  indexed_map.c  list.c  logger.c  nmo_hash.c  shared_library.c  string.c
src/format/: chunk.c  chunk_api.c  chunk_arrays.c  chunk_bitmap.c  chunk_compression.c  chunk_crc.c  chunk_identifiers.c  chunk_lifecycle.c  chunk_managers.c  chunk_math.c  chunk_navigation.c  chunk_parser.c  chunk_pool.c  chunk_primitives.c  chunk_remap.c  chunk_sequences.c  chunk_serialize.c  chunk_subchunks.c  chunk_writer.c  header.c  header1.c  manager.c  manager_registry.c  nmo_data.c  nmo_id_remap.c  nmo_image.c  nmo_image_codec.c  nmo_stb_adapter.c  object.c  stream_io.c
src/io/: io.c  io_checksum.c  io_compressed.c  io_file.c  io_memory.c  txn_posix.c  txn_windows.c
src/schema/: class_hierarchy.c  migrator.c  param_type_table.c  schema.c  schema_builder.c  schema_registry.c  validator.c
src/schema/builtin/: builtin_types.c  builtin_types_macro_example.c  ck2dentity_schemas.c  ck3dentity_schemas.c  ck3dobject_schemas.c  ckattributemanager_schemas.c  ckbehavior_schemas.c  ckbehaviorio_schemas.c  ckbehaviorlink_schemas.c  ckbeobject_schemas.c  ckcamera_schemas.c  ckdataarray_schemas.c  ckgroup_schemas.c  cklevel_schemas.c  cklight_schemas.c  ckmaterial_schemas.c  ckmesh_schemas.c  ckmessagemanager_schemas.c  ckobject_hierarchy.c  ckobject_schemas.c  ckparameter_schemas.c  ckrenderobject_schemas.c  ckscene_schemas.c  cksceneobject_schemas.c  cksprite_schemas.c  ckspritetext_schemas.c  cktexture_schemas.c  context_macro_example.c  param_types.c  version_example.c
src/session/: builder.c  id_remap.c  load_session.c  object_index.c  object_repository.c  parser.c  reference_resolver.c
tests/: CMakeLists.txt  test_framework.c  test_framework.h
tests/integration/: CMakeLists.txt  test_all_reference_files.c  test_chunk_special_cases.c  test_data_roundtrip.c  test_file_io.c  test_file_roundtrip.c  test_finish_loading.c  test_load_pipeline.c  test_macro_integration.c  test_real_file_roundtrip.c  test_round_trip.c  test_roundtrip.c  test_save_pipeline.c  test_stream_io.c
tests/performance/: CMakeLists.txt  test_index_queries.c  test_performance.c
tests/stress/: CMakeLists.txt  test_memory.c
tests/unit/: CMakeLists.txt  test_allocator.c  test_arena.c  test_arena_array.c  test_array.c  test_arrays.c  test_bit_array.c  test_buffer.c  test_buffer_variants.c  test_chunk.c  test_chunk_16bit.c  test_chunk_advanced.c  test_chunk_api.c  test_chunk_core.c  test_chunk_encoded_bitmap.c  test_chunk_helpers.c  test_chunk_id_remap.c  test_chunk_legacy_bitmap.c  test_chunk_parser.c  test_chunk_raw_bitmap.c  test_chunk_remap.c  test_chunk_serialization.c  test_chunk_serialize.c  test_chunk_writer.c  test_ckbeobject_deserialize.c  test_ckobject_deserialize.c  test_ckobject_hierarchy.c  test_context.c  test_context_session.c  test_context_threadsafe.c  test_error.c  test_guid.c  test_hash_set.c  test_hash_table.c  test_header.c  test_header1.c  test_id_remap.c  test_id_remap_simple.c  test_identifier_search.c  test_identifiers.c  (+39 more)
tools/: CMakeLists.txt  nmo-convert.c  nmo-debug.c  nmo-diff.c  nmo-inspect.c  nmo-validate.c
